@@ -1,3 +1,5 @@
+- doc comments in colour refer to im_LabQ2disp() etc. 
+
 - could VipsConversion now have an @in member?
 
   we've moved all the no-input ones of to create now, I think
